--- a/generators/server/templates/pom.xml.ejs
+++ b/generators/server/templates/pom.xml.ejs
@@ -103,11 +103,9 @@
   <%_ if (!reactive) { _%>
         <liquibase-hibernate5.version><%= LIQUIBASE_VERSION %></liquibase-hibernate5.version>
   <%_ } _%>
-  <%_ if (devDatabaseTypeH2Any && (prodDatabaseTypeMysql || reactive)) { _%>
+  <%_ if (devDatabaseTypeH2Any && reactive) { _%>
         <h2.version><%= H2_VERSION %></h2.version>
-    <%_ if (reactive) { _%>
         <h2-r2dbc.version><%= H2_R2DBC_VERSION %></h2-r2dbc.version>
-    <%_ } _%>
   <%_ } _%>
         <validation-api.version>2.0.1.Final</validation-api.version>
   <%_ if (reactive) { _%>
@@ -1585,7 +1583,7 @@
                 <dependency>
                     <groupId>com.h2database</groupId>
                     <artifactId>h2</artifactId>
-  <%_ if (prodDatabaseTypeMysql || reactive) { _%>
+  <%_ if (reactive) { _%>
                     <version>${h2.version}</version>
   <%_ } _%>
                 </dependency>
