--- a/generators/server/templates/src/main/resources/config/liquibase/master.xml.ejs
+++ b/generators/server/templates/src/main/resources/config/liquibase/master.xml.ejs
@@ -12,12 +12,17 @@
     <property name="uuidType" value="uuid" dbms="h2"/>
   <%_ } _%>
     <property name="datetimeType" value="datetime" dbms="h2"/>
-  <%_ if (prodDatabaseTypePostgres) { _%>
-    <property name="clobType" value="longvarchar" dbms="h2"/>
+  <%_ if (reactive) { _%>
+    <property name="clobType" value="varchar(1000000)" dbms="h2"/>
+    <property name="blobType" value="varchar(1000000)" dbms="h2"/>
   <%_ } else { _%>
+    <%_ if (prodDatabaseTypePostgres) { _%>
+    <property name="clobType" value="longvarchar" dbms="h2"/>
+    <%_ } else { _%>
     <property name="clobType" value="clob" dbms="h2"/>
-  <%_ } _%>
+    <%_ } _%>
     <property name="blobType" value="blob" dbms="h2"/>
+  <%_ } _%>
 <%_ } _%>
 <%_ if (devDatabaseTypeMysql || prodDatabaseTypeMysql) { _%>
     <property name="now" value="now()" dbms="mysql"/>
