--- a/generators/entity-server/templates/reactive/partials/update_template.ejs
+++ b/generators/entity-server/templates/reactive/partials/update_template.ejs
@@ -16,26 +16,32 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -%>
-<%_ const instanceType = restClass;
-const instanceName = restInstance;
-const mapper = entityInstance  + 'Mapper';
-const dtoToEntity = mapper + '.' + 'toEntity';
-const entityToDtoReference = mapper + '::' + 'toDto';
-_%>
-<%_ if (viaService) { _%>
-        return <%= entityInstance %>Service.update(<%= instanceName %>)
+<%_ if (updatableEntity) { _%>
+  <%_ if (returnDirectly) { _%>
+        return Mono.just(<%= restInstance %>)
+  <%_ } _%>
+  <%_ if (dtoMapstruct) { %>
+            .map(<%= entityInstance %>Mapper::toEntity)
+  <%_ } -%>
+  <%_ if (isPersisted) { _%>
+            .map(<%= entityInstance %> -> <%= entityInstance %>.setIsPersisted())
+  <%_ } -%>
+            .<%= mapOrFlatMap %>(<%= entityInstance %>Repository::save)
+  <%_ if (searchEngineElasticsearch) { %>
+            .<%= mapOrFlatMap %>(<%= entityInstance %>SearchRepository::save)
+  <%_ } -%>
 <%_ } else { _%>
-    <%_ if (updatableEntity) { _%>
-        return <%= entityInstance %>Repository.save(<%if (dtoMapstruct) { %><%= dtoToEntity %>(<% } %><%= instanceName %><%if (dtoMapstruct) { %>)<% } -%><% if (isPersisted) { %>.setIsPersisted()<% } %>)
-    <%_ } else { _%>
+  <%_ if (returnDirectly) { _%>
         // no save call needed as we have no fields that can be updated
-        return <%= entityInstance %>Repository.findById(<%= instanceName %>.get<%= primaryKey.nameCapitalized %>())
-    <%_ } _%>
-    <%_ if (searchEngineElasticsearch) { %>
-            .flatMap(<%= entityInstance %>SearchRepository::save)
-    <%_ } -%>
-    <%_ if (dtoMapstruct) { %>
-            .map(<%= entityToDtoReference  %>)
-    <%_ } -%>
-    <%_ if (returnDirectly) { _%>;<%_ } _%>
+        return <%= entityInstance %>Repository.findById(<%= primaryKey.name %>)
+  <%_ } else { _%>
+            // no save call needed as we have no fields that can be updated
+            .then(<%= entityInstance %>Repository.findById(<%= primaryKey.name %>))
+  <%_ } _%>
+<%_ } _%>
+<%_ if (dtoMapstruct) { %>
+            .map(<%= entityInstance %>Mapper::toDto)
+<%_ } -%>
+<%_ if (returnDirectly) { -%>
+        ;
 <%_ } _%>
