--- a/generators/server/templates/src/main/java/package/web/rest/errors/ExceptionTranslator.java.ejs
+++ b/generators/server/templates/src/main/java/package/web/rest/errors/ExceptionTranslator.java.ejs
@@ -34,6 +34,9 @@ import org.springframework.http.converter.HttpMessageConversionException;
 <%_ if (reactive && databaseTypeSql) { _%>
 import org.springframework.stereotype.Component;
 <%_ } _%>
+<%_ if (reactive) { _%>
+import org.springframework.validation.BindException;
+<%_ } _%>
 import org.springframework.validation.BindingResult;
 <%_ if (!reactive) { _%>
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -48,6 +51,7 @@ import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.context.request.NativeWebRequest;
 <%_ } _%>
 import org.springframework.core.env.Environment;
+import org.springframework.core.env.Profiles;
 import org.zalando.problem.DefaultProblem;
 import org.zalando.problem.Problem;
 import org.zalando.problem.ProblemBuilder;
@@ -66,8 +70,6 @@ import javax.annotation.Nullable;
 import javax.servlet.http.HttpServletRequest;
 <%_ } _%>
 import java.net.URI;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -159,9 +161,17 @@ _%>
         return <% if (reactive) { %>Mono.just(<% } %>new ResponseEntity<>(builder.build(), entity.getHeaders(), entity.getStatusCode())<% if (reactive) { %>)<% } %>;
     }
 
+    @ExceptionHandler
+    public <%- returnType %> handleBindingResult(BindException ex, @Nonnull <%= requestClass %> request) {
+        return this.handleBindingResult(ex, ex.getBindingResult(), request);
+    }
+
     @Override
     public <%- returnType %> handle<%_ if (reactive) { _%>BindingResult(WebExchangeBindException<% } else { %>MethodArgumentNotValid(MethodArgumentNotValidException<% } %> ex, @Nonnull <%= requestClass %> request) {
-        BindingResult result = ex.getBindingResult();
+        return this.handleBindingResult(ex, ex.getBindingResult(), request);
+    }
+
+    protected <%- returnType %> handleBindingResult(Exception ex, BindingResult result, <%= requestClass %> request) {
         List<FieldErrorVM> fieldErrors = result.getFieldErrors().stream()
             .map(f -> new FieldErrorVM(f.getObjectName().replaceFirst("<%= dtoSuffix %>$", ""), f.getField(), StringUtils.isNotBlank(f.getDefaultMessage()) ? f.getDefaultMessage() : f.getCode()))
             .collect(Collectors.toList());
@@ -213,9 +223,7 @@ _%>
 
     @Override
     public ProblemBuilder prepare(final Throwable throwable, final StatusType status, final URI type) {
-        Collection<String> activeProfiles = Arrays.asList(env.getActiveProfiles());
-
-        if (activeProfiles.contains(JHipsterConstants.SPRING_PROFILE_PRODUCTION)) {
+        if (this.env.acceptsProfiles(Profiles.of(JHipsterConstants.SPRING_PROFILE_PRODUCTION))) {
             if (throwable instanceof HttpMessageConversionException) {
                 return Problem.builder()
                     .withType(type)
@@ -267,6 +275,6 @@ _%>
     private boolean containsPackageName(String message) {
 
         // This list is for sure not complete
-        return StringUtils.containsAny(message, "org.", "java.", "net.", "javax.", "com.", "io.", "de.", "<%= packageName %>");
+        return StringUtils.startsWithAny(message, "org.", "java.", "net.", "javax.", "com.", "io.", "de.", "<%= packageName %>");
     }
 }
