--- a/generators/liquibase-changelogs/templates/src/main/resources/config/liquibase/fake-data/table_entity.csv.ejs
+++ b/generators/liquibase-changelogs/templates/src/main/resources/config/liquibase/fake-data/table_entity.csv.ejs
@@ -17,78 +17,24 @@
  limitations under the License.
 -%>
 <%_
-let table = [];
-
-// Generate CSV header
-let header = [];
-const fieldsToGenerate = [...allFields.filter(f => f.id), ...fields.filter(f => !f.id)];
-for (field of fieldsToGenerate) {
-  header.push(field.columnName);
-  if (field.shouldCreateContentType) {
-    header.push(field.columnName + '_content_type');
-  }
-}
-for (relationship of relationships) {
-  const { relationshipType, joinColumnNames } = relationship;
-  if (
-    (relationshipType === "many-to-one"
-      || (relationshipType === "one-to-one" && relationship.ownerSide === true
-         && (relationship.id == null || relationship.id === false))
-    ) && (relationship.relationshipValidate === true && relationship.relationshipRequired)
-  ) {
-    header.push(joinColumnNames[0]);
-  }
-}
-table.push(header);
+const table = [];
+table.push(entity.liquibaseHeader);
 
 // Generate CSV rows
 
-for (lineNb = 0; lineNb < entity.fakeDataCount; lineNb++) {
-  const rowData = entity.liquibaseFakeData[lineNb];
-  let line = [];
-  for (field of fieldsToGenerate) {
-    let data = rowData[field.fieldName];
-    // manage required
-    if (data === undefined) {
-      if (field.id || (field.fieldValidateRules && field.fieldValidateRules.includes('required'))) {
-        // Remove row;
-        line = [];
-        break;
-      }
-      data = '';
-    }
-
-    line.push(data);
+for (const rowData of entity.liquibaseFakeData) {
+  const line = [];
+  for (field of fieldsWithFakeData) {
+    line.push(rowData[field.fieldName] ?? '');
     if (field.shouldCreateContentType) {
-      line.push('image/png');
+      line.push(rowData[`${field.fieldName}ContentType`] ?? '');
     }
   }
 
-  for (relationship of relationships) {
-    const relationshipType = relationship.relationshipType;
-    if (
-      (relationshipType === "many-to-one"
-        || (relationshipType === "one-to-one" && relationship.ownerSide === true
-           && (relationship.id == null || relationship.id === false))
-      ) && (relationship.relationshipValidate === true && relationship.relationshipRequired)
-    ) {
-      const otherLiquibaseFakeData = relationship.otherEntity.liquibaseFakeData;
-      let relationshipRow = lineNb;
-      if (relationship.otherEntity.fakeDataCount > 0 && relationshipRow >= relationship.otherEntity.fakeDataCount && !relationship.unique) {
-        relationshipRow = entity.faker.datatype.number({min: 1, max: relationship.otherEntity.fakeDataCount}) - 1;
-      }
-      if (relationshipRow < relationship.otherEntity.fakeDataCount) {
-        line.push(otherLiquibaseFakeData[relationshipRow][relationship.otherEntity.primaryKey.name]);
-      }
-    }
+  for (relationship of relationshipsWithFakeData) {
+    line.push(rowData[relationship.relationshipName]);
   }
-  if (line.length === header.length) {
-    table.push(line);
-  }
+  table.push(line);
 }
-
-let result = table
-      .map(line => line.join(';'))
-      .join('\n');
 _%>
-<%- result %>
+<%- table.map(line => line.join(';')).join('\n') %>
